--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "openai": "^4.68.1"
