--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@huggingface/inference": "^2.8.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
